<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddReminder">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_btn"
        android:src="@android:drawable/ic_btn_speak_now"
        android:contentDescription="@string/rec_btn"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/name_et"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_title"
        tools:ignore="Autofill,LabelFor"
        android:inputType="textNoSuggestions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reminder_desc"
        android:ems="15"
        android:layout_gravity="center"
        android:inputType="textMultiLine"
        android:hint="@string/hint_desc"
        tools:ignore="Autofill,LabelFor"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/amount_et"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/hint_amt"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </TableRow>

    <!--<ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/repeat_toggle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textOn="@string/repeat_toggle_on"
        android:textOff="@string/repeat_toggle_off"/>-->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_btn"
            android:text="@string/set_btn"
            android:shadowColor="#f0f5d8"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_btn"
            android:text="@string/reset_btn"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"/>
    </TableRow>
</LinearLayout>