<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rec_rem"
            android:text="@string/my_recs"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
            android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
            tools:ignore="RtlSymmetry"
            tools:targetApi="jelly_bean_mr1" />

        <ImageButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="#4CAF50"
            android:contentDescription="@string/img_btn"
            android:src="@android:drawable/ic_media_play" />
    </TableRow>

    <TextView
        android:id="@+id/rec_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        tools:ignore="RtlSymmetry"
        tools:targetApi="jelly_bean_mr1"/>

</LinearLayout>